Arreglo Create y Update de localidad, empiezo con gerentes

--- a/ejercicios2/sistema_contable/cuentas/templates/base.html
+++ b/ejercicios2/sistema_contable/cuentas/templates/base.html
@@ -16,6 +16,7 @@
             <li><a href="/busqueda/">Buscador</a></li>
             <li><a href="/movimientos/">Movimientos</a></li>
             <li><a href="/localidades/">Localidades</a></li>
+            <li><a href="/gerentes/">Gerentes</a></li>
         </ul>
         {% endblock %}
     </div>
