--- a/ejercicios2/sistema_contable/cuentas/templates/gerentes.html
+++ b/ejercicios2/sistema_contable/cuentas/templates/gerentes.html
@@ -4,14 +4,29 @@
 
 {% block content %}
 
-{% if gerentes %}
-<ul>
-{% for gerente in gerentes %}
-    <li><a href=/gerente/{{gerente.id}}>{{gerente.nombre}}</a>
-{% endfor %}
-</ul>
-{% else %}
-<h3>No hay gerentes para mostrar</h3>
-{% endif %}
+    {% if gerentes %}
+        <ul>
+        {% for gerente in gerentes %}
+
+            <li><a href=/gerente/{{gerente.id}}>{{gerente.nombre}}</a></br>
+            {% if gerente.cuentas.all %}
+                <ul>
+                    {% for cuenta in gerente.cuentas.all %}
+
+                        <li>{{ cuenta }}</li>
+                        <ul>
+                        {% for movimiento in cuenta.movimiento_set.all %}
+                            <li>({{movimiento.fecha}}) {{movimiento.comprobante}} ${{movimiento.importe}}</li>
+                        {% endfor%}
+                        </ul>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+
+        {% endfor %}
+        </ul>
+        {% else %}
+        <h3>No hay gerentes para mostrar</h3>
+    {% endif %}
 
 {% endblock %}
